syntax = "proto3";

package s2s;

import "s2s/s2s_msg_id.proto";

message ReqEnter {
    MSGID msg_id = 1;
    uint32 server_type = 2;
    uint32 server_id = 3;
}

message RepEnter {
    MSGID msg_id = 1;
    uint32 server_type = 2;
    uint32 server_id = 3;
}